--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body {
 	box-shadow: 0px 3px 12px #000;
 	border-radius: 4px;
 	padding: 20px;
+  -webkit-backface-visibility: none;
 }
 #gameStats {
 	background: #eee;
