--- a/style.css
+++ b/style.css
@@ -212,10 +212,10 @@ body {
 	width: 110px;
 	height: 145px;
 	position: absolute;
-	-moz-transition: all .3s;
-	-webkit-transition: all .3s;
-	-o-transition: all .3s;
-	transition: all .3s;
+	-moz-transition: all .3s ease;
+	-webkit-transition: all .3s ease;
+	-o-transition: all .3s ease;
+	transition: all .3s ease;
 	cursor: pointer;
 }
 
